--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,7 +24,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: amandytta #Seu usuario
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          gif_out_path: dist/github-contribution-grid-snake-dark.svg
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - run: git status
